# cipa_fraud

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml  requirements-lock.txt
src/cipa_fraud/: __init__.py  adapt.py  cli.py  consistency.py  registry.py  run.py  settings.py
src/cipa_fraud/compare/: __init__.py  analysis.py  build.py  data.py  figures.py
src/cipa_fraud/report/: __init__.py  build.py  reproducibility.py  writeup.py
tests/: __init__.py  conftest.py  test_adapt.py  test_compare_analysis.py  test_consistency.py  test_registry.py  test_reproducibility.py  test_run.py
